Fix contrast issues in the footer

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ footer {
 }
 
 footer > a {
-  color: #1234ec;
+  color: #2c1d55;
 }
 
 /* Home page */
